$Id: CHANGES,v 1.269 2005/01/21 09:27:26 stelian Exp $

Changes between versions 0.4b38 and 0.4b39 (released January 21, 2005)
======================================================================

1.	The newly added dump_on_cd_3 example was buggy, replace it
	with an updated version from Andrew Basterfield
	<bob@cemetery.homeunix.org>.

2.	Made restore to chdir() back into the initial directory when
	dumping core while aborting a comparision operation. The
	previous behaviour was to write the corefile at the root of
	the directory being compared, which could very well be 
	read only and preventing the corefile generation. Thanks
	to Kenneth Porter <shiva@sewingwitch.com> for the bug report.

3.	Silenced the failure to call fgetflags() when comparing an
	entry which has no ext2 attributes (as in lsattr()).

4.	Fix a brown paper bug in restore -C which broke restore and
	caused modifications on the filesystem being compared
	(directories containing a file with the same name as the
	directory get renamed to RSTTMP...). Thanks to Kenneth Porter
	<shiva@sewingwitch.com> for finding the bug and helping me
	reproduce it.

5.	Made restore -C force the -N flag (no writing allowed on
	the disk) in order to prevent more bugs like the above one.

Changes between versions 0.4b37 and 0.4b38 (released January 7, 2005)
=====================================================================

1.	Fix a couple of troff syntax bugs in the man pages.
	Thanks to Eric Raymond <esr@thyrsus.com> for the patch.

2.	Made restore use either libncurses or libtermcap, depending
	on which one is available at configure time.

3.	Fixed restore negative size display bug when comparing a
	dump containing files over 2GB. Thanks to Steve Bonds
	<sbonds@users.sourceforge.net> for the bug report.

4.	Do not save directory entries to non-dumped inodes 
	(excluded from dump). This will eliminate the 'missing
	file' warnings when doing 'restore -C'.

5.	Fix dump crash when backuping a huge (2TB) filesystem,