@@ -1,4 +1,13 @@
-$Id: CHANGES,v 1.269 2005/01/21 09:27:26 stelian Exp $
+$Id: CHANGES,v 1.270 2005/01/24 10:32:01 stelian Exp $
+
+Changes between versions 0.4b39 and 0.4b40 (released ????????????????)
+======================================================================
+
+1.	Changed restore to emit warnings (instead of emitting a fatal
+	error) if a file (or a directory) is unavailable for a 
+	comparision (if the user doesn't have the necessary permissions
+	to access it for example). Thanks to Kenneth Porter
+	<shiva@sewingwitch.com> for the bug report.
 
 Changes between versions 0.4b38 and 0.4b39 (released January 21, 2005)
 ======================================================================
